--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,5 +1,34 @@
 {
-  "docsets_to_publish": [],
+  "docsets_to_publish": [
+    {
+      "docset_name": "Fortest01",
+      "build_source_folder": "fortest01",
+      "build_output_subfolder": "Fortest01",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Achievements": "Toc",
+        "LearningPath": "Content",
+        "Module": "Content",
+        "ModuleUnit": "Content",
+        "ZonePivotGroups": "Toc",
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes",
+      "base_path": "learn",
+      "site_name": "Docs",
+      "customized_tasks": {
+        "docset_postbuild": [
+          "_dependentPackages/CommonPlugins/tools/TripleCrownValidation.ps1"
+        ]
+      }
+    }
+  ],
   "notification_subscribers": [
     "pk02282017@outlook.com"
   ],
